--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.0.0",
     "@emotion/react": "^11.13.3",
@@ -18,13 +19,15 @@
     "@types/react-redux": "^7.1.34",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
+    "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
